--- a/dns.html
+++ b/dns.html
@@ -14,7 +14,13 @@ body, html {
   height: 100%;
   line-height: 1.8;
 }
-
+.w3-container1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+ /* Set the height to 100% of the viewport height to center vertically */
+}
 /* Full height image header */
 .bgimg-1 {
   background-position: center;
@@ -31,6 +37,34 @@ body, html {
 .w3-bar .w3-button {
   padding: 16px;
 }
+          @keyframes ping-animation {
+            0%, 100% {
+                transform: scale(1);
+                opacity: 0.5;
+            }
+            50% {
+                transform: scale(1.2);
+                opacity: 0;
+            }
+        }
+
+        #pingValueContainer {
+            display: flex;
+            align-items: center;
+        }
+
+        #pingAnimation {
+            width: 20px;
+            height: 20px;
+            background-color: #3498db;
+            border-radius: 50%;
+            margin-right: 10px;
+            animation: ping-animation 1s linear infinite;
+        }
+
+        #pingValue {
+            font-size: 16px;
+        }
 </style>
 </head>
 <body>
@@ -62,7 +96,36 @@ body, html {
 <div class="w3-display-container bgimg2">
 </div>
 
+<div class="w3-container1 w3-padding-64 w3-black w3-center w3-wide">
+  <h1>Ultra Low Latency Network</h1>
+    <p id="pingValueContainer">
+        <span id="pingAnimation"></span>
+        <span id="pingValue">Loading...</span> ms
+    </p>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            function fetchPing() {
+                var startTime;
+                $.ajax({
+                    url: 'https://dns.tarunx.me/dns-query', // Replace with your desired URL
+                    beforeSend: function() {
+                        startTime = +new Date();
+                    },
+                    complete: function(jqXHR, textStatus) {
+                        var ping = (+new Date()) - startTime;
+                        $("#pingValue").text(ping);
+                    }
+                });
+            }
 
+            // Fetch ping initially and then at regular intervals (e.g., every 5 seconds)
+            fetchPing();
+            setInterval(fetchPing, 5000); // Adjust the interval as needed
+        });
+    </script>
+</div>
+  
 <div class="w3-container w3-padding-64 w3-white w3-center w3-wide">
   <h1>Natively supported on all major platforms — it only takes a few seconds to set up.</h1>
   <p class="w3-large">Enjoy the privacy and security benefits of DNS-over-HTTPS and DNS-over-TLS — the modern and encrypted DNS protocols.
