--- a/dns.html
+++ b/dns.html
@@ -126,7 +126,7 @@ body, html {
     </script>
 </div>
   
-<div class="w3-container w3-padding-64 w3-white w3-center w3-wide">
+<div class="w3-container w3-padding-64 w3-white w3-center">
   <h1>Natively supported on all major platforms — it only takes a few seconds to set up.</h1>
   <p class="w3-large">Enjoy the privacy and security benefits of DNS-over-HTTPS and DNS-over-TLS — the modern and encrypted DNS protocols.
 Cover all networks — at home, on cellular, at work and on public Wi-Fi.
