--- a/dns.html
+++ b/dns.html
@@ -96,7 +96,7 @@ body, html {
 <div class="w3-display-container bgimg2">
 </div>
 
-<div class="w3-container1 w3-padding-64 w3-black w3-center w3-wide">
+<div class="w3-container1 w3-padding-64 w3-black w3-center">
   <h1>Ultra Low Latency Network</h1>
     <p id="pingValueContainer">
         <span id="pingAnimation"></span>
