--- a/dns.html
+++ b/dns.html
@@ -87,7 +87,7 @@ body, html {
   <source src="https://github.com/tarunkumar519/tarunkumar519.github.io/releases/download/m1/dns.mp4" type="video/mp4">
 </video></div>
 
-<div class="w3-container w3-padding-64 w3-black w3-center w3-wide">
+<div class="w3-container w3-padding-64 w3-black w3-center">
   <h1>Even your ISP can't track you</h1>
   <p class="w3-large">DNS requests are Encrypted on transit. Works even on all mobile networks.</p>
 
@@ -97,7 +97,7 @@ body, html {
 </div>
 
 <div class="w3-container1 w3-padding-64 w3-black w3-center">
-  <h1>Ultra Low Latency Network</h1>
+  <h2>Ultra Low Latency Network</h2>
     <p id="pingValueContainer">
         <span id="pingAnimation"></span>
         <span id="pingValue">Loading...</span> ms
@@ -127,7 +127,7 @@ body, html {
 </div>
   
 <div class="w3-container w3-padding-64 w3-white w3-center">
-  <h1>Natively supported on all major platforms — it only takes a few seconds to set up.</h1>
+  <h2>Natively supported on all major platforms — it only takes a few seconds to set up.</h2>
   <p class="w3-large">Enjoy the privacy and security benefits of DNS-over-HTTPS and DNS-over-TLS — the modern and encrypted DNS protocols.
 Cover all networks — at home, on cellular, at work and on public Wi-Fi.
 Zero impact on your CPU, memory or battery life — it's all done at the DNS level, not on your device.
