--- a/dns.html
+++ b/dns.html
@@ -102,7 +102,7 @@ body, html {
         <span id="pingAnimation"></span>
         <span id="pingValue">Loading...</span>  ms
     </p>
-      <p>BLR&nbsp&nbsp&nbspHYD&nbsp&nbsp&nbspWAR</p>
+      <p>BLR&nbsp&nbsp&nbsp<b>HYD</b>&nbsp&nbsp&nbspWAR</p>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $(document).ready(function() {
