--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
     <body>
         <script>
             window.onload=function(){
-                window.location.replace="blog.tarunx.me";
+                window.location.href = "blog.tarunx.me";
             }
         </script>
     </body>
