--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+    <meta http-equiv="refresh" content="0; url=https://blog.tarunx.me" />
+        </head>
     <body>
-        <script>
-            window.onload=function(){
-                window.location.href = "blog.tarunx.me";
-            }
-        </script>
     </body>
 </html>
