--- a/vpn.html
+++ b/vpn.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Taruns Server DNS</title>
+<title>Taruns Server VPN</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -120,11 +120,12 @@ Near zero impact on your CPU, memory or battery life - wireguard VPN protocol us
 <div class="w3-container w3-light-grey" style="padding:128px 16px">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-      <h3 id="iphone">Private DNS on Android & iOS</h3>
+      <h3 id="iphone">Private VPN on Android & iOS</h3>
     <p>1. Download & install Wireguard app for Android <a href="https://play.google.com/store/apps/details?id=com.wireguard.android">here</a>.</p>
     <p>2. ownload & install Wireguard app for iPhone/iPad <a href="https://itunes.apple.com/us/app/wireguard/id1441195209?ls=1&mt=8">here</a>.</p>
     <p>3. <b>Tap Plus button or Add tunnel button</b>.</p>
     <p>4. Scan QR code or import device file given to you.</p>
+    <p>5. Turn on Wireguard VPN.</p>
 </div>
   </div>
 </div>
@@ -132,7 +133,7 @@ Near zero impact on your CPU, memory or battery life - wireguard VPN protocol us
 <div class="w3-container w3-light-grey" style="padding:128px 16px">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-        <h3 id="windows11">Private DNS on Lpatops & other PC</h3>
+        <h3 id="windows11">Private VPN on Laptops & other PC</h3>
     <p>1. Download & install Wireguard app for Windows <a href="https://download.wireguard.com/windows-client/wireguard-installer.exe">here</a>.</p>
     <p>2. Download & install Wireguard app for Macbooks <a href="https://itunes.apple.com/us/app/wireguard/id1451685025?ls=1&mt=12">here</a></p>
     <p>3. Click on import file & select your device file given to you.</p>
