--- a/vpn.html
+++ b/vpn.html
@@ -102,7 +102,7 @@ body, html {
         <span id="pingAnimation"></span>
         <span id="pingValue">2</span>  ms
     </p>
-      <p>Mumbai</p>
+      <p>AWS Mumbai</p>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </div>
