--- a/vpn.html
+++ b/vpn.html
@@ -122,7 +122,7 @@ Near zero impact on your CPU, memory or battery life - wireguard VPN protocol us
     <div class="w3-col m6">
       <h3 id="iphone">Private VPN on Android & iOS</h3>
     <p>1. Download & install Wireguard app for Android <a href="https://play.google.com/store/apps/details?id=com.wireguard.android">here</a>.</p>
-    <p>2. ownload & install Wireguard app for iPhone/iPad <a href="https://itunes.apple.com/us/app/wireguard/id1441195209?ls=1&mt=8">here</a>.</p>
+    <p>2. Download & install Wireguard app for iPhone/iPad <a href="https://itunes.apple.com/us/app/wireguard/id1441195209?ls=1&mt=8">here</a>.</p>
     <p>3. <b>Tap Plus button or Add tunnel button</b>.</p>
     <p>4. Scan QR code or import device file given to you.</p>
     <p>5. Turn on Wireguard VPN.</p>
