--- a/server.html
+++ b/server.html
@@ -254,6 +254,26 @@
             </div>
           </div>
         </div>
+		
+				        <div class="feature-card bg-overseerr">
+          <div class="feature-container">
+            <div class="w-row">
+              <div class="w-col w-col-5"></div>
+              <div class="column-8 w-col w-col-7">
+                <h1 data-w-id="7382bdf2-0da1-69f6-628f-9615c875149b" style="-webkit-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="feature-heading text-white">Discover & Request any Movie, Show in the world with Overseerr</h1>
+              </div>
+            </div>
+            <div class="div-block-13">
+              <div class="feature-columns w-row">
+                <div class="w-col w-col-7"><img src="images/overseerr.jpg" loading="lazy" data-w-id="7382bdf2-0da1-69f6-628f-9615c87514a0" sizes="(max-width: 479px) 100vw, (max-width: 767px) 58vw, (max-width: 991px) 483.21875px, 66vw" srcset="images/overseerr.jpg" alt="" class="feature-image feature-image-left"></div>
+                <div class="w-col w-col-5">
+                  <p class="paragraph text-right text-white">Search and request any movie or show on Overseerr - it will be downloaded and available on Plex automatically.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+		
 		        <div class="feature-card bg-photoprism">
           <div class="feature-container">
             <div class="w-row">
