--- a/server.html
+++ b/server.html
@@ -277,17 +277,17 @@
 		        <div class="feature-card bg-photoprism">
           <div class="feature-container">
             <div class="w-row">
-              <div class="w-col w-col-5"></div>
-              <div class="column-8 w-col w-col-7">
-                <h1 data-w-id="7382bdf2-0da1-69f6-628f-9615c875149b" style="-webkit-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="feature-heading text-white">Magically access all these apps from anywhere.</h1>
+              <div class="w-col w-col-7">
+                <h1 data-w-id="c783b0bc-8b11-f19b-2fd0-52bc1ef457a5" style="-webkit-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="feature-heading text-white">Magically access all these apps from anywhere.</h1>
               </div>
+              <div class="column-8 w-col w-col-5"></div>
             </div>
             <div class="div-block-13">
-              <div class="feature-columns w-row">
-                <div class="w-col w-col-7"><img src="images/tailscale.png" loading="lazy" data-w-id="7382bdf2-0da1-69f6-628f-9615c87514a0" sizes="(max-width: 479px) 100vw, (max-width: 767px) 58vw, (max-width: 991px) 483.21875px, 66vw" srcset="images/tailscale.png" alt="" class="feature-image feature-image-left"></div>
+              <div class="feature-columns reverse w-row">
                 <div class="w-col w-col-5">
-                  <p class="paragraph text-right text-white">Tailscale is zero config VPN that creates a secure network between the server and your devices. Even when separated by firewalls or subnets, Tailscale just works.</p>
+                  <p class="paragraph text-left text-white">Tailscale is zero config VPN that creates a secure network between the server and your devices. Even when separated by firewalls or subnets, Tailscale just works.</p>
                 </div>
+                <div class="w-col w-col-7"><img src="images/tailscale.png" loading="lazy" data-w-id="c783b0bc-8b11-f19b-2fd0-52bc1ef457ae" sizes="(max-width: 479px) 100vw, (max-width: 767px) 58vw, (max-width: 991px) 483.21875px, 66vw" srcset="images/tailscale.png" alt="" class="feature-image feature-image-right"></div>
               </div>
             </div>
           </div>
