--- a/server.html
+++ b/server.html
@@ -151,6 +151,11 @@
         </div>
         <h1 data-w-id="a264c121-f411-8d08-29d8-36b2a20024cb" style="-webkit-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="big-heading">A personal cloud for you</h1>
         <p data-w-id="c266114f-66ce-3f12-4ce4-9c9b04c42137" style="opacity:0;-webkit-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="paragraph">Watch Movies & Shows, Safely store your files & passwords. Access your precious memories from anywhere. I use open source apps like Bitwarden, immich, Plex and Matrix to make you break away from big tech, and take full control of your data. For free.</p>
+        <div class="cta-buttons">
+          <a data-w-id="def6bd49-7e1f-bdba-cc0b-77e61d0c0119" style="-webkit-transform:translate3d(0, 10px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" href="#start" class="gradient-button link-block button-hero w-inline-block">
+            <div class="button-text">Join the party</div><img src="images/arrow.svg" loading="lazy" alt="" class="button-arrow">
+          </a>
+        </div>
 <img class="mockup" src="images/umbrel-hero-image.jpg" width="1440" alt="" style="-webkit-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" sizes="(max-width: 479px) 96vw, (max-width: 767px) 93vw, (max-width: 991px) 728px, 940px" data-w-id="c7ba4c8e-bb61-2614-40b4-7dbb395dda56" loading="lazy" srcset="images/umbrel-hero-image.jpg">
       </div>
     </div>
@@ -187,7 +192,7 @@
             <div class="w-row">
               <div class="w-col w-col-5"></div>
               <div class="column-8 w-col w-col-7">
-                <h1 data-w-id="adaab630-9097-d8a9-44aa-218a0a65219b" style="-webkit-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="feature-heading text-white">Block ads on your entire network with Pi-hole.</h1>
+                <h1 data-w-id="adaab630-9097-d8a9-44aa-218a0a65219b" style="-webkit-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="feature-heading text-white">Block ads on your entire network with Pi-hole.</h1><p class="text-white">Coming Soon</p>
               </div>
             </div>
             <div class="div-block-13">
@@ -531,6 +536,50 @@
         <h1 class="big-heading text-gradient">join the party.</h1>
       </div>
     </div>
+	
+	    <div id="start" class="section pt-0 wf-section">
+      <div class="container w-container">
+        <h1 data-w-id="7fa5f8c1-6182-4ccf-7705-aa7777383773" style="-webkit-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="big-heading">How to use the server?</h1>
+        <p data-w-id="7fa5f8c1-6182-4ccf-7705-aa7777383777" style="-webkit-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="paragraph mb-60">Tailscale VPN app gives you access to the server. Plex is accessible without VPN.</p>
+        <div class="columns-4 w-row">
+          <div class="w-col w-col-7 w-col-medium-6">
+            <div data-w-id="7fa5f8c1-6182-4ccf-7705-aa777738377f" style="-webkit-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="card relative">
+              <div class="badge d-none">Recommended</div>
+              <div class="card-container">
+                <div class="card-header">
+                  <h2 class="heading card-heading">Create tailscale account and install tailscale app</h2>
+                </div>
+                <p class="paragraph text-left">It's easy, just follow the below steps.</p>
+                <div class="note mb-20 note-green">
+                  <div class="note-text note-text-2">Click how to install below</div>
+                </div>
+                <div class="columns columns-centered w-row">
+                  <div class="column-5 w-col w-col-6 w-col-stack">
+                    <div data-w-id="982f5ceb-f96d-3bee-01e9-a99202cf0a58" class="list-item">
+					<p>1. Open Link and create Tailscale account.</p>                    
+					</div>
+                    <div data-w-id="982f5ceb-f96d-3bee-01e9-a99202cf0a58" class="list-item">
+					<p>2. Accept Invite.</p>                    
+                    </div>
+                    <div data-w-id="982f5ceb-f96d-3bee-01e9-a99202cf0a58" class="list-item">
+					<p>3. Download Tailscale app.</p>                    
+                    </div>
+                    <div data-w-id="982f5ceb-f96d-3bee-01e9-a99202cf0a58" class="list-item">
+					<p>4. Additional step for Mobile Phones.</p>                    
+                    </div>
+					</div>
+                  <div class="column-4 w-col w-col-6 w-col-stack"><img src="images/pi-vertical.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 40vw, (max-width: 991px) 100vw, 229px" srcset="images/pi-vertical-p-500.png 500w, images/pi-vertical.png 536w" alt="" class="image-10"></div>
+                </div>
+                <a href="#" data-w-id="3213b0ed-bad9-e842-705e-6adc87da1e9c" class="arrow-link w-inline-block">
+                  <div class="arrow-link-text">How to install</div><img src="images/arrow_1.svg" loading="lazy" alt="" class="arrow-link-icon">
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+	
 <!--    <div id="faq" class="section wf-section">
       <div class="container w-container">
         <h1 data-w-id="abe4d218-8d26-bedc-1420-3d2fa4cf070a" style="-webkit-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="big-heading">Frequently Asked Questions</h1>
@@ -607,6 +656,57 @@
     <footer id="footer" class="footer dark wf-section">
       <div class="text-block-3">there&#x27;s no cloud, it&#x27;s just someone else&#x27;s computer</div>
     </footer>
+  </div>
+    <div data-w-id="a6a10fe0-7e0d-2d0d-9c9b-1d1119cf105a" style="display:none;opacity:0" class="modal-wrapper">
+    <div class="modal">
+      <div class="card relative modal-card">
+        <div class="card-container">
+          <div class="card-header">
+            <h2 class="heading card-heading modal-heading">Create tailscale account and install tailscale app</h2>
+            <a scroll="enable" data-w-id="e4ad42c5-7943-d638-2ed3-904b0f475415" href="#" class="w-inline-block"><img src="images/cross.svg" loading="lazy" width="29" alt=""></a>
+          </div>
+          <div data-delay="4000" data-animation="slide" class="slider-2 w-slider" data-autoplay="false" data-easing="ease" data-hide-arrows="true" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500" data-infinite="false">
+            <div class="w-slider-mask">
+              <div class="slide w-slide">
+                <h4 class="heading-step">Step 1. Open Link and create Tailscale account.</h4><br>
+                <a href="https://login.tailscale.com/admin/invite/dcneAH7pK2J" target="_blank" class="gradient-button secondary w-inline-block">
+                  <div class="button-text">Open Link</div><img src="images/arrow.svg" loading="lazy" alt="" class="button-arrow">
+                </a><img src="images/step1.png" loading="lazy" alt="" class="step-image">
+              </div>
+              <div class="slide w-slide">
+                <h4 class="heading-step">Step 2. Accept Invite.</h4>
+                <p class="paragraph text-left mb-60">After creating account you will be asked to accept the invite. Click Accept Invite.</p>
+<img src="images/step2.png" loading="lazy" alt="" class="step-image">
+              </div>
+              <div class="slide w-slide">
+                <h4 class="heading-step">Step 3. Download Tailscale app.</h4>
+                <p class="paragraph text-left mb-60">Follow the instructions on that page to download and install tailscale on your devices.</p>
+              <img src="images/step3.png" loading="lazy" alt="" class="step-image">
+				</div>
+              <div class="slide w-slide">
+                <h4 class="heading-step">Step 4. Additional step for Mobile Phones.</h4>
+                <p class="paragraph text-left mb-20">On your smartphone, enable VPN On-Demand feature to make tailscale VPN run only when you are using any app on server. This saves battery.</p>
+				<div class="note mt-10">
+                  <div class="note-text">👉 Go to <b>Settings</b> by clicking on your profile. Select <b>VPN On-Demand</b>. Turn on everything as show below. Make sure Wi-Fi and Mobile Data are set as <b>Do Nothing</b>.</div>
+                </div><img src="images/step4.png" loading="lazy" alt="" class="step-image">
+              </div>
+              <div class="slide w-slide">
+                <h4 class="heading-step">Step 5. That's it!.</h4>
+                <p class="paragraph text-left">Access all the apps from below links once connected to Tailscale.</p>
+				<a href="http://server.taile9289.ts.net:2283/"target="_blank">immich</a>
+				<a href="https://passwords.tarunx.me"target="_blank">Bitwarden</a>
+				<a href="https://request.tarunx.me"target="_blank">Overseerr</a>
+				<a href="https://app.plex.tv"target="_blank">Plex</a>
+              </div>
+            </div>
+            <div class="arrow w-slider-arrow-left"><img src="images/arrow.svg" loading="lazy" width="10" alt="" class="image-11 flip-image"></div>
+            <div class="arrow arrow-next w-slider-arrow-right"><img src="images/arrow.svg" loading="lazy" width="10" alt="" class="image-11"></div>
+            <div class="w-slider-nav w-slider-nav-invert w-round"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div scroll="enable" data-w-id="0788b3f1-eecf-14c9-fd8c-86e134bfed98" class="modal-background"></div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61e577d77d5e43b4d1ee4926" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
