--- a/server.html
+++ b/server.html
@@ -151,11 +151,6 @@
         </div>
         <h1 data-w-id="a264c121-f411-8d08-29d8-36b2a20024cb" style="-webkit-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="big-heading">A personal cloud for you</h1>
         <p data-w-id="c266114f-66ce-3f12-4ce4-9c9b04c42137" style="opacity:0;-webkit-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="paragraph">Watch Movies & Shows, Safely store your files & passwords. Access your precious memories from anywhere. I use open source apps like Bitwarden, immich, Plex and Matrix to make you break away from big tech, and take full control of your data. For free.</p>
-        <div class="cta-buttons">
-          <a data-w-id="def6bd49-7e1f-bdba-cc0b-77e61d0c0119" style="-webkit-transform:translate3d(0, 10px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" href="#start" class="gradient-button link-block button-hero w-inline-block">
-            <div class="button-text">Join the party</div><img src="images/arrow.svg" loading="lazy" alt="" class="button-arrow">
-          </a>
-        </div>
 <img class="mockup" src="images/umbrel-hero-image.jpg" width="1440" alt="" style="-webkit-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" sizes="(max-width: 479px) 96vw, (max-width: 767px) 93vw, (max-width: 991px) 728px, 940px" data-w-id="c7ba4c8e-bb61-2614-40b4-7dbb395dda56" loading="lazy" srcset="images/umbrel-hero-image.jpg">
       </div>
     </div>
@@ -209,7 +204,7 @@
           <div class="feature-container">
             <div class="w-row">
               <div class="w-col w-col-7">
-                <h1 data-w-id="c783b0bc-8b11-f19b-2fd0-52bc1ef457a5" style="-webkit-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="feature-heading text-white">Backup your photo and video library with immich.</h1><p class="text-white">Coming Soon</p>
+                <h1 data-w-id="c783b0bc-8b11-f19b-2fd0-52bc1ef457a5" style="-webkit-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="feature-heading text-white">Backup your photo and video library with immich.</h1>
               </div>
               <div class="column-8 w-col w-col-5"></div>
             </div>
@@ -279,7 +274,7 @@
           </div>
         </div>
 		
-		        <div class="feature-card bg-photoprism">
+		   <!--     <div class="feature-card bg-photoprism">
           <div class="feature-container">
             <div class="w-row">
               <div class="w-col w-col-7">
@@ -296,7 +291,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </div>
@@ -537,7 +532,7 @@
       </div>
     </div>
 	
-	    <div id="start" class="section pt-0 wf-section">
+	<!--    <div id="start" class="section pt-0 wf-section">
       <div class="container w-container">
         <h1 data-w-id="7fa5f8c1-6182-4ccf-7705-aa7777383773" style="-webkit-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="big-heading">How to use the server?</h1>
         <p data-w-id="7fa5f8c1-6182-4ccf-7705-aa7777383777" style="-webkit-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="paragraph mb-60">Tailscale VPN app gives you access to the server. Plex is accessible without VPN.</p>
@@ -657,7 +652,7 @@
       <div class="text-block-3">there&#x27;s no cloud, it&#x27;s just someone else&#x27;s computer</div>
     </footer>
   </div>
-    <div data-w-id="a6a10fe0-7e0d-2d0d-9c9b-1d1119cf105a" style="display:none;opacity:0" class="modal-wrapper">
+ <!--   <div data-w-id="a6a10fe0-7e0d-2d0d-9c9b-1d1119cf105a" style="display:none;opacity:0" class="modal-wrapper">
     <div class="modal">
       <div class="card relative modal-card">
         <div class="card-container">
@@ -707,7 +702,7 @@
       </div>
     </div>
     <div scroll="enable" data-w-id="0788b3f1-eecf-14c9-fd8c-86e134bfed98" class="modal-background"></div>
-  </div>
+  </div> -->
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61e577d77d5e43b4d1ee4926" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
