--- a/discover.html
+++ b/discover.html
@@ -72,7 +72,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		</style><link rel="alternate" href="https://www.plex.tv/a24-movies/" hreflang="x-default">
 
 	<!-- This site is optimized with the Yoast SEO Premium plugin v21.4 (Yoast SEO v21.4) - https://yoast.com/wordpress/plugins/seo/ -->
-	<title>A24 Movies | Plex</title>
+	<title>Top 5 | Tarun's server</title>
 	<link rel="canonical" href="https://www.plex.tv/a24-movies/">
 	<meta property="og:locale" content="en_US">
 	<meta property="og:type" content="article">
