--- a/server.html
+++ b/server.html
@@ -168,7 +168,7 @@
           <div class="feature-container">
             <div class="w-row">
               <div class="w-col w-col-7">
-                <h1 data-w-id="ad20d216-7eee-0cde-f931-83577277239d" style="-webkit-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="feature-heading text-white">Run your private cloud with Nextcloud </h1><p class="text-white">Coming Soon</p>
+                <h1 data-w-id="ad20d216-7eee-0cde-f931-83577277239d" style="-webkit-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="feature-heading text-white">Run your private cloud with Nextcloud </h1>
               </div>
               <div class="column-8 w-col w-col-5"></div>
             </div>
