--- a/help.html
+++ b/help.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+    <head>
+        <title>Chat directly in Whatsapp</title>
+        <meta charset="UTF-8">
+</head>
 <h>Know some good Music? Help others discover it & grow our Plexamp library together</h>
 <p>
 
