--- a/help.html
+++ b/help.html
@@ -10,7 +10,9 @@
 
 Share it here. To share Open Spotify > Go the the song then find the entire album the song is in > Tap Share button and share the links here
 
-Each link will be in separate line like the examples shown here.
+You can enter Artist names, or spotify Album links in seperate lines
+
+Each link will be in separate line like the examples shown in the link.
 
 Every night the albums in this page are downloaded automatically (in higher quality VORBIS format from DVDs)</p>
 <a href="https://cloud.tarunx.me/s/YgnsPZFwG88A3Q8">Link Here</a>
