--- a/vpn.html
+++ b/vpn.html
@@ -100,9 +100,9 @@ body, html {
   <h2>Ultra Low Latency Network</h2>
     <p id="pingValueContainer">
         <span id="pingAnimation"></span>
-        <span id="pingValue">2</span>  ms
+        <span id="pingValue">24</span>  ms
     </p>
-      <p>AWS Mumbai</p>
+      <p>AWS Australia</p>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </div>
