--- a/vpn.html
+++ b/vpn.html
@@ -143,7 +143,7 @@ Near zero impact on your CPU, memory or battery life - wireguard VPN protocol us
 </div>
 
 
-
+<p>Wireguard app is also available on Smart TVs. Your SmartTV sends highest amount of data about you in your home</p>
 
 
 <!-- Footer -->
