--- a/help.html
+++ b/help.html
@@ -2,20 +2,10 @@
 <html>
 <body>
     <head>
-        <title>Chat directly in Whatsapp</title>
+        <title>Temporary limits</title>
         <meta charset="UTF-8">
 </head>
-<h>Know some good Music? Help others discover it & grow our Plexamp library together</h>
-<p>
-
-Share it here. To share Open Spotify > Go the the song then find the entire album the song is in > Tap Share button and share the links here
-
-You can enter Artist names, or spotify Album links in seperate lines
-
-Each link will be in separate line like the examples shown in the link.
-
-Every night the albums in this page are downloaded automatically (in higher quality VORBIS format from DVDs)</p>
-<a href="https://cloud.tarunx.me/s/YgnsPZFwG88A3Q8">Link Here</a>
+<h>Your Plex streaming is limited to 720P until February 14 due to us exceeding monthly data cap. We are switching to Unlimited plan starting February 14 for the forseeable future  so this won't happen again.</h>
 
 </body>
 </html>
