--- a/encryption.html
+++ b/encryption.html
@@ -16,7 +16,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: Consolas,Menlo,Monaco,Andale Mono WT,Andale
 <body>
 
 <div class="w3-container w3-padding-64 w3-black w3-center">
-  <h1 class="w3-large">End to end encryption - Explained like you're 5</h1>
+  <h1 class="w3-large">End to end encryption on our Server- Explained like you're 5</h1>
 <p>Imagine a box. A box in which you put all your photos.</p><p>For safekeeping you give the box to a cloud storage service. But then, some nosy
 employees start peeking into the box.</p><p>Meanwhile, the cloud service company is training an AI, and for training their
 AI they need lots of data. So they cannot resist, and open the box so that they
