--- a/server.html
+++ b/server.html
@@ -204,7 +204,7 @@ Your everyday essentials, available everywhere.</h1>
             <div class="w-row">
               <div class="w-col w-col-5"></div>
               <div class="column-8 w-col w-col-7">
-                <h1 data-w-id="adaab630-9097-d8a9-44aa-218a0a65219b" style="-webkit-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="feature-heading text-white">More privacy.<br>More protection.<br>More peace of mind</h1>
+                <h1 data-w-id="adaab630-9097-d8a9-44aa-218a0a65219b" style="-webkit-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="feature-heading text-white">More privacy.<br>More protection.<br>More pea0ce of mind.</h1>
               </div>
             </div>
             <div class="div-block-13">
