--- a/server.html
+++ b/server.html
@@ -579,7 +579,7 @@ Your everyday essentials, available everywhere.</h1>
     </div>
 		<div class="container text-center w-container">
 	<h1 data-w-id="26bb18cd-5f4d-d9e3-871d-e09270d63ee3" style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); opacity: 1; transform-style: preserve-3d;" class="big-heading"><a code style="text-decoration:none" href ="#donate">..it's about making a change.</a></h1>
-	<p data-w-id="a3bf713e-9349-8330-cbfc-6cd4353359d1" style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); opacity: 1; transform-style: preserve-3d;" class="paragraph mb-30">Donate to help me keep up with Server maintenance, power & broadband costs and help me get more hardware to keep your data safe and better.</p>
+	<p data-w-id="a3bf713e-9349-8330-cbfc-6cd4353359d1" style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); opacity: 1; transform-style: preserve-3d;" class="paragraph mb-30">Contribute to help me keep up with Server maintenance, power & broadband costs and help me get more hardware to keep your data safe and better.</p>
 
     <a href="phonepe://upi//pay?pa=9177043770hdfc@ybl&pn=Tarun&am=&tn=My contribution to Server&cu=INR"><button class="phone-pe" title="PhonePe"></button> </a>
     <a href="tez://upi/pay?pa=ga1325117-1@okaxis&cu=INR&mc=0000&appName=TEST&tn=My contribution to Server&am=&pn=Tarun&tr=TEST-1574159602900"><button class="google-pay" title="Google pay"></button></a>
