--- a/server.html
+++ b/server.html
@@ -178,8 +178,7 @@
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Tarun's Server</a>
-    <a href="https://tserver.42web.io/login.php" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Login</a>
-    <a href="https://tserver.42web.io/signup.php" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Signup</a>
+    <a href="https://apps.tarunx.me" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Login</a>
   </div>
 </div>
 
