--- a/server.html
+++ b/server.html
@@ -174,7 +174,7 @@
     </style>
 </head>
 <!-- Navbar -->
-<div class="w3-top">
+<!--<div class="w3-top">
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Tarun's Server</a>
@@ -182,11 +182,11 @@
   </div>
 </div>
 
-<!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
+<!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) 
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
   <a href="https://tserver.42web.io/login.php" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Login</a>
-  <a href="https://tserver.42web.io/signup.php" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Signup</a>
-</div>
+  <a href="https://tserver.42web.io/signup.php" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Signup</a> 
+</div> -->
 <body class="body">
   <div data-w-id="8b4d1f7c-f4d3-78f5-6415-3eca696d56e1" style="filter:blur(0px)" class="content-wrapper">
     <div data-w-id="6cf5c2d0-adae-62ee-1e23-cd002883485b" class="hero wf-section">
@@ -577,13 +577,13 @@ Your everyday essentials, available everywhere.</h1>
         </div>
       </div>
     </div>
-				<div class="container text-center w-container">
+<!--				<div class="container text-center w-container">
 	<h1 data-w-id="26bb18cd-5f4d-d9e3-871d-e09270d63ee3" style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); opacity: 1; transform-style: preserve-3d;" class="big-heading"><a code style="text-decoration:none" href ="#donate">..it's about making a change.</a></h1>
 	<p data-w-id="a3bf713e-9349-8330-cbfc-6cd4353359d1" style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg); opacity: 1; transform-style: preserve-3d;" class="paragraph mb-30">Contribute to help me keep up with Server maintenance, power & broadband costs and help me get more hardware to keep your data safe and better.</p>
 
     <a href="phonepe://upi//pay?pa=9177043770hdfc@ybl&pn=Tarun&am=&tn=My contribution to Server&cu=INR"><button class="phone-pe" title="PhonePe"></button> </a>
     <a href="tez://upi/pay?pa=ga1325117-1@okaxis&cu=INR&mc=0000&appName=TEST&tn=My contribution to Server&am=&pn=Tarun&tr=TEST-1574159602900"><button class="google-pay" title="Google pay"></button></a>
-	</div> </br></br></br></br>
+	</div> </br></br></br></br> -->
     <div id="community" class="section wf-section">
       <div class="container-4 w-container">
         <h1 class="big-heading text-gradient">join the party.</h1>
